- better gol algo (Plugins\gol.c)
- added 1d cell automata where each iteration will add a new row: Plugins\rowca
- added arguments-class in pixels.h to ease parsing arguments in plugins.
  example:

  void perform_effect(_frame f, _args a)
  {
	arguments ar(a.s);

	// ar.count()	return the number of arguments
	// ar[i]	return i'th argument
	...

0.31
- added plugins by Olaf Matthes: PeRColate and PixelPack. Thanks, Olaf!
- the console is back. It's good for printf():ing from plugins..
- New filters: BitLeft, Picasso, PicChop, yage, zoomnoise
- Rewrote some examples, added a couple and numbered them
- Fs got CVS'd: http://sourceforge.net/projects/pure-data/cvs

0.30
- vframe supports plugin parameters
- doubleclicking the framestein-logo equals "reset"
- fs.frame "stayontop" OFF by default
- got rid of the console, "Show debug" in menu instead (right-click the framestein-logo)
- l2s from zexy included in Patches-dir, zexy no longer needed
- disconnecting pd from fs will cause a reset

0.29
- example-basics.pd is really just the basics now
- fs.event.pd: get more events from fs.frame (mousedown, mouseup, dropped filename)
- fs.waveform.pd: array display with selection capabilities, see example-waveformdisplay.pd
- new external vdrawarray for the previous: draw array contents on vframe
- the really cool fs.mask.pd and example-masking.pd
- the really cool fs.blend.pd and example-blending.pd
- fs.frame button widget. try "button <receivename> <x> <y> <buttoncaption>"
  (no more widgets are planned)
- dragging fs.frame with <alt> down moves window, ignoring mousetrack_1
- fs.sonogram made compatible with latest pd test-version
- cleaned up some examples..

0.28
- finally, the ability to write AVIs! see example-avioutput.pd
- added searchpath, see example-searchpath.pd

  new in fs.frame:

- "use <directory>" - like buffer, but no buffering (load on demand)
- new popupmenu commands: save image as, undock