@@ -1,4 +1,4 @@
-#N canvas 301 30 843 370 12;
+#N canvas 301 30 847 374 12;
 #X obj 172 80 loadbang;
 #X obj 126 275 fs_sender;
 #X obj 51 27 inlet;
@@ -19,6 +19,7 @@
 #X text 362 196 pen <r> <g> <b> (to set pen color);
 #X text 362 215 brush <r> <g> <b> (to set brush color);
 #X obj 172 110 symbol \$0D;
+#X text 363 262 width <line width>;
 #X connect 0 0 19 0;
 #X connect 2 0 3 0;
 #X connect 3 0 4 0;
