@@ -1,11 +1,9 @@
-#N canvas 278 0 702 496 12;
-#X obj 27 293 netsend;
+#N canvas 278 0 710 499 12;
 #X floatatom 27 322 4 0 0;
 #X obj 207 160 loadbang;
 #X msg 206 254 disconnect;
 #X msg 27 253 send \$1;
 #X obj 27 203 r fs_main;
-#X msg 207 185 6001;
 #X obj 127 128 inlet;
 #X text 175 126 port;
 #X obj 127 170 t f b;
@@ -32,22 +30,24 @@ configuring fs likewise (right-click fs).;
 #X text 404 364 ignore some errors;
 #X obj 408 431 r symbolfile;
 #X obj 530 207 r fs_reset;
-#X connect 0 0 1 0;
-#X connect 2 0 6 0;
-#X connect 3 0 0 0;
-#X connect 4 0 0 0;
-#X connect 5 0 4 0;
-#X connect 6 0 25 0;
-#X connect 7 0 9 0;
-#X connect 9 0 25 0;
-#X connect 9 1 3 0;
-#X connect 12 0 22 0;
-#X connect 14 0 21 0;
-#X connect 14 1 15 0;
-#X connect 15 0 0 0;
-#X connect 16 0 19 0;
+#X msg 207 185 6001;
+#X obj 27 293 netsend;
+#X connect 1 0 29 0;
+#X connect 2 0 30 0;
+#X connect 3 0 30 0;
+#X connect 4 0 3 0;
+#X connect 5 0 7 0;
+#X connect 7 0 23 0;
+#X connect 7 1 2 0;
+#X connect 10 0 20 0;
+#X connect 12 0 19 0;
+#X connect 12 1 13 0;
+#X connect 13 0 30 0;
+#X connect 14 0 17 0;
+#X connect 20 0 12 0;
+#X connect 20 1 21 0;
 #X connect 22 0 14 0;
-#X connect 22 1 23 0;
-#X connect 24 0 16 0;
-#X connect 24 1 17 0;
-#X connect 25 0 0 0;
+#X connect 22 1 15 0;
+#X connect 23 0 30 0;
+#X connect 29 0 23 0;
+#X connect 30 0 0 0;
